--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
               <div class="list-group">
                 <a href="http://codepen.io/hamiltopia/full/BQQRyB/" class="list-group-item list-group-item-action" target="_blank">Front End Palette</a>
                 <a href="http://codepen.io/hamiltopia/pen/rLoAmV" class="list-group-item list-group-item-action" target="_blank">Vars</a>
+								<a href="https://codepen.io/hamiltopia/pen/PNVQZg?editors=1000" class="list-group-item list-group-item-action" target="_blank">Simple Drupal Stuffs</a>
+								<a href="https://css-tricks.com/examples/ShapesOfCSS/" class="list-group-item list-group-item-action" target="_blank">Shapes of CSS</a>
 								<a href="http://www.cssarrowplease.com/" class="list-group-item list-group-item-action" target="_blank">CSS Arrow Please!</a>
               </div>
 
 							<h4>This Bear</h4>
-							<blockquote class="imgur-embed-pub" lang="en" data-id="BMSd5JQ"><a href="//imgur.com/BMSd5JQ">Grizzly Bear poo smells like pepper spray and has whistles in it</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+							<blockquote class="imgur-embed-pub" lang="en" data-id="KRZkfs6"><a href="//imgur.com/KRZkfs6">Grizzly Bear</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
 
 						</section><!-- column -->
