--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </div>
 
 							<h4>This Bear</h4>
-							<blockquote class="imgur-embed-pub" lang="en" data-id="KRZkfs6"><a href="//imgur.com/KRZkfs6">Grizzly Bear</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+							<blockquote style="width:100%; max-width:100%;" class="imgur-embed-pub" lang="en" data-id="KRZkfs6"><a href="//imgur.com/KRZkfs6">Grizzly Bear</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
 
 						</section><!-- column -->
