--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 					<!-- A few of my favorite things -->
 					<div class="row">
-            <section class="col-md-3">
+            <section class="col-md-3" style="display:block;">
 
               <h4>Tools</h4>
               <div class="list-group">
