Update Gradient Hunt
added link to Gradient Hunt

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 								<a href="https://codepen.io/hamiltopia/pen/PNVQZg?editors=1000" class="list-group-item list-group-item-action" target="_blank">Simple Drupal Stuffs</a>
 								<a href="https://css-tricks.com/examples/ShapesOfCSS/" class="list-group-item list-group-item-action" target="_blank">Shapes of CSS</a>
 								<a href="http://www.cssarrowplease.com/" class="list-group-item list-group-item-action" target="_blank">CSS Arrow Please!</a>
+								<a href="https://webcode.tools/" class="list-group-item list-group-item-action" target="_blank">The Ultimate Web Code Generator</a>
               </div>
 
 							<h4>This Bear</h4>
@@ -92,12 +93,13 @@
 
 							<h4>Colors</h4>
               <div class="list-group">
-                <a href="hhttps://material.io/guidelines/style/color.html#" class="list-group-item list-group-item-action" target="_blank">Material Color Style</a>
+                <a href="https://material.io/guidelines/style/color.html" class="list-group-item list-group-item-action" target="_blank">Material Color Style</a>
 								<a href="https://coolors.co/" class="list-group-item list-group-item-action" target="_blank">Coolors Generator</a>
 								<a href="http://www.flatuicolorpicker.com/" class="list-group-item list-group-item-action" target="_blank">Flat Palette</a>
 								<a href="https://uigradients.com" class="list-group-item list-group-item-action" target="_blank">UIGraidents</a>
 								<a href="https://cssgradient.io/" class="list-group-item list-group-item-action" target="_blank">Graident Generator</a>
 								<a href="http://css3generator.com/" class="list-group-item list-group-item-action" target="_blank">CSS3 Generator</a>
+								<a href="https://gradienthunt.com/" class="list-group-item list-group-item-action" target="_blank">Graident Hunt</a>
 
               </div>
 
@@ -123,6 +125,12 @@
                 <a href="http://dtrs.us/" class="list-group-item list-group-item-action" target="_blank">Dtrs.us</a>
                 <a href="http://thisthing.cc/" class="list-group-item list-group-item-action" target="_blank">This Thing</a>
                 <a href="http://woodworksboston.com/" class="list-group-item list-group-item-action" target="_blank">WoodWorks</a>
+              </div>
+
+
+							<h4>Others</h4>
+              <div class="list-group">
+                <a href="https://www.eclecticlobby.com/bearworld/" class="list-group-item list-group-item-action" target="_blank">Bear World</a>
               </div>
 
 						</section><!-- column -->
