update to bootstrap

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 							<h4>Font Tools</h4>
               <div class="list-group">
-                <a href="https://getbootstrap.com/content/typography/" class="list-group-item list-group-item-action" target="_blank">BS4 Typography</a>
+                <a href="https://getbootstrap.com/docs/4.1/content/typography/" class="list-group-item list-group-item-action" target="_blank">BS4 Typography</a>
                 <a href="https://fontawesome.com/icons?d=gallery" class="list-group-item list-group-item-action" target="_blank">Font Awesome</a>
                 <a href="http://www.cssfontstack.com/" class="list-group-item list-group-item-action" target="_blank">CSS Font Stacks</a>
 								<a href="https://fonts.google.com/" class="list-group-item list-group-item-action" target="_blank">Google Fonts</a>
@@ -108,7 +108,7 @@
 
 							<h4>More Tools</h4>
               <div class="list-group">
-                <a href="https://getbootstrap.com/getting-started/introduction/" class="list-group-item list-group-item-action" target="_blank">Bootstrap 4</a>
+                <a href="https://getbootstrap.com/" class="list-group-item list-group-item-action" target="_blank">Bootstrap 4</a>
 								<a href="https://owlcarousel2.github.io/OwlCarousel2/" class="list-group-item list-group-item-action" target="_blank">OWL Carousel</a>
 								<a href="http://iconmonstr.com/collections/" class="list-group-item list-group-item-action" target="_blank">IconMonstr</a>
 								<a href="https://unsplash.it/images" class="list-group-item list-group-item-action" target="_blank">Unsplash</a>
