--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 						<li class="nav-item">
 							<a class="nav-link" href="https://codepen.io/hamiltopia/pens/public/" target="_blank">Codepen</a>
 						</li>
-
+						<li class="nav-item">
+							<a class="nav-link" href="https://panel.dreamhost.com/" target="_blank">Dreamhost</a>
+						</li>
 					</ul>
 				</div>
 
@@ -115,6 +117,9 @@
 								<a href="https://placehold.it/" class="list-group-item list-group-item-action" target="_blank">Placehold.it</a>
 								<a href="https://tinypng.com/" class="list-group-item list-group-item-action" target="_blank">Tiny PNG</a>
 								<a href="https://compressor.io/compress" class="list-group-item list-group-item-action" target="_blank">Compressor.io</a>
+								<a href="http://www.heropatterns.com/" class="list-group-item list-group-item-action" target="_blank">Hero Patterns</a>
+
+
               </div>
 
 						</section><!-- column -->
