--- a/index.html
+++ b/index.html
@@ -115,9 +115,12 @@
 								<a href="http://iconmonstr.com/collections/" class="list-group-item list-group-item-action" target="_blank">IconMonstr</a>
 								<a href="https://unsplash.it/images" class="list-group-item list-group-item-action" target="_blank">Unsplash</a>
 								<a href="https://placehold.it/" class="list-group-item list-group-item-action" target="_blank">Placehold.it</a>
+								<a href="https://squoosh.app/" class="list-group-item list-group-item-action" target="_blank">Squoosh</a>
 								<a href="https://tinypng.com/" class="list-group-item list-group-item-action" target="_blank">Tiny PNG</a>
 								<a href="https://compressor.io/compress" class="list-group-item list-group-item-action" target="_blank">Compressor.io</a>
+								<a href="https://whimsical.co" class="list-group-item list-group-item-action" target="_blank">Whimsical</a>
 								<a href="http://www.heropatterns.com/" class="list-group-item list-group-item-action" target="_blank">Hero Patterns</a>
+
 
 
               </div>
