--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						</section><!-- column -->
 						<section class="col-md-3">
 
-							<h4>Font Tools</h4>
+							<h4>Font Tools!</h4>
               <div class="list-group">
                 <a href="https://getbootstrap.com/docs/4.1/content/typography/" class="list-group-item list-group-item-action" target="_blank">BS4 Typography</a>
                 <a href="https://fontawesome.com/icons?d=gallery" class="list-group-item list-group-item-action" target="_blank">Font Awesome</a>
