--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
 
 							    <div id="colapTwo" class="collapse" role="tabpanel" aria-labelledby="fontstack">
 							      <div class="card-block">
-
+											<code>font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;</code>
+											<br><br>
 											<code>font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;</code>
 											<br><br>
 											<code>font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;</code>
