update with Unicons

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <a href="https://getbootstrap.com/" class="list-group-item list-group-item-action" target="_blank">Bootstrap 4</a>
 								<a href="https://owlcarousel2.github.io/OwlCarousel2/" class="list-group-item list-group-item-action" target="_blank">OWL Carousel</a>
 								<a href="http://iconmonstr.com/collections/" class="list-group-item list-group-item-action" target="_blank">IconMonstr</a>
+								<a href="https://iconscout.com/unicons" class="list-group-item list-group-item-action" target="_blank">Unicons</a>
 								<a href="https://unsplash.it/images" class="list-group-item list-group-item-action" target="_blank">Unsplash</a>
 								<a href="https://placehold.it/" class="list-group-item list-group-item-action" target="_blank">Placehold.it</a>
 								<a href="https://squoosh.app/" class="list-group-item list-group-item-action" target="_blank">Squoosh</a>
