--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
               <div class="list-group">
                 <a href="https://getbootstrap.com/" class="list-group-item list-group-item-action" target="_blank">Bootstrap 4</a>
 								<a href="https://owlcarousel2.github.io/OwlCarousel2/" class="list-group-item list-group-item-action" target="_blank">OWL Carousel</a>
+								<a href="https://iconsvg.xyz/" class="list-group-item list-group-item-action" target="_blank">Icons XYZ</a>
 								<a href="http://iconmonstr.com/collections/" class="list-group-item list-group-item-action" target="_blank">IconMonstr</a>
 								<a href="https://iconscout.com/unicons" class="list-group-item list-group-item-action" target="_blank">Unicons</a>
 								<a href="https://unsplash.it/images" class="list-group-item list-group-item-action" target="_blank">Unsplash</a>
