--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<a class="nav-link" href="http://www.gizmodo.com" target="_blank">Giz</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="http://www.huffpost.com" target="_blank">Huff</a>
+							<a class="nav-link" href="https://fonts.google.com/" target="_blank">Google Fonts</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="https://boston.craigslist.org/" target="_blank">Craigs</a>
