added: Convert Case Text Generator Tool

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 								<a href="https://css-tricks.com/examples/ShapesOfCSS/" class="list-group-item list-group-item-action" target="_blank">Shapes of CSS</a>
 								<a href="http://www.cssarrowplease.com/" class="list-group-item list-group-item-action" target="_blank">CSS Arrow Please!</a>
 								<a href="https://webcode.tools/" class="list-group-item list-group-item-action" target="_blank">The Ultimate Web Code Generator</a>
+								<a href="https://convertcase.net/" class="list-group-item list-group-item-action" target="_blank">Convert Case Text Generator Tool</a>
               </div>
 
 							<h4>This Bear</h4>
