--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
 							<h4>Colors</h4>
               <div class="list-group">
+								<a href="https://colorpalettes.com/" class="list-group-item list-group-item-action" target="_blank">Color Palettes</a>
                 <a href="https://material.io/guidelines/style/color.html" class="list-group-item list-group-item-action" target="_blank">Material Color Style</a>
 								<a href="https://coolors.co/" class="list-group-item list-group-item-action" target="_blank">Coolors Generator</a>
 								<a href="http://www.flatuicolorpicker.com/" class="list-group-item list-group-item-action" target="_blank">Flat Palette</a>
@@ -103,6 +104,16 @@
 						</section><!-- column -->
 						<section class="col-md-3">
 
+							<h4>Images</h4>
+              <div class="list-group">
+								<a href="https://search.creativecommons.org/" class="list-group-item list-group-item-action" target="_blank">CC Image Search</a>
+								<a href="https://unsplash.it/images" class="list-group-item list-group-item-action" target="_blank">Unsplash</a>
+								<a href="https://placehold.it/" class="list-group-item list-group-item-action" target="_blank">Placehold.it</a>
+								<a href="https://squoosh.app/" class="list-group-item list-group-item-action" target="_blank">Squoosh</a>
+								<a href="https://tinypng.com/" class="list-group-item list-group-item-action" target="_blank">Tiny PNG</a>
+								<a href="https://compressor.io/compress" class="list-group-item list-group-item-action" target="_blank">Compressor.io</a>
+							</div>
+
 							<h4>More Tools</h4>
               <div class="list-group">
                 <a href="https://getbootstrap.com/" class="list-group-item list-group-item-action" target="_blank">Bootstrap 4</a>
@@ -110,16 +121,8 @@
 								<a href="https://iconsvg.xyz/" class="list-group-item list-group-item-action" target="_blank">Icons XYZ</a>
 								<a href="http://iconmonstr.com/collections/" class="list-group-item list-group-item-action" target="_blank">IconMonstr</a>
 								<a href="https://iconscout.com/unicons" class="list-group-item list-group-item-action" target="_blank">Unicons</a>
-								<a href="https://unsplash.it/images" class="list-group-item list-group-item-action" target="_blank">Unsplash</a>
-								<a href="https://placehold.it/" class="list-group-item list-group-item-action" target="_blank">Placehold.it</a>
-								<a href="https://squoosh.app/" class="list-group-item list-group-item-action" target="_blank">Squoosh</a>
-								<a href="https://tinypng.com/" class="list-group-item list-group-item-action" target="_blank">Tiny PNG</a>
-								<a href="https://compressor.io/compress" class="list-group-item list-group-item-action" target="_blank">Compressor.io</a>
 								<a href="https://whimsical.co" class="list-group-item list-group-item-action" target="_blank">Whimsical</a>
 								<a href="http://www.heropatterns.com/" class="list-group-item list-group-item-action" target="_blank">Hero Patterns</a>
-
-
-
               </div>
 
 						</section><!-- column -->
