--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
 							<h4>Colors</h4>
               <div class="list-group">
+								<a href="https://colordesigner.io/gradient-generator" class="list-group-item list-group-item-action" target="_blank">Color Palette Gradient Generator</a>
 								<a href="https://colorpalettes.com/" class="list-group-item list-group-item-action" target="_blank">Color Palettes</a>
                 <a href="https://material.io/guidelines/style/color.html" class="list-group-item list-group-item-action" target="_blank">Material Color Style</a>
 								<a href="https://coolors.co/" class="list-group-item list-group-item-action" target="_blank">Coolors Generator</a>
