--- a/index.html
+++ b/index.html
@@ -56,6 +56,58 @@
 			<div id="main" class="container-fluid">
 				<div class="container">
 
+					<div class="row no-gutters justify-content-center">
+    <div class="col">
+
+			<!-- Nested Grid -->
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col">
+
+						<!-- List -->
+						<div class="list-group">
+							<a href="https://github.com/" class="list-group-item list-group-item-action" target="_blank">GitHub</a>
+							<a href="http://gizmodo.com/" class="list-group-item list-group-item-action" target="_blank">Gizmodo</a>
+							<a href="http://kotaku.com/" class="list-group-item list-group-item-action" target="_blank">Kotaku</a>
+						</div>
+						<!-- List -->
+
+					</div><!-- Column -->
+					<div class="col">
+
+						<!-- List -->
+						<div class="list-group">
+							<a href="https://www.amazon.com/" class="list-group-item list-group-item-action" target="_blank">Amazon</a>
+							<a href="https://www.reddit.com/new/" class="list-group-item list-group-item-action" target="_blank">Reddit</a>
+						</div>
+						<!-- List -->
+
+					</div><!-- Column -->
+					<div class="col">
+
+						<!-- List -->
+						<div class="list-group">
+							<a href="https://www.reddit.com/new/" class="list-group-item list-group-item-action" target="_blank">Reddit</a>
+							<a href="https://www.amazon.com/" class="list-group-item list-group-item-action" target="_blank">Amazon</a>
+							<a href="http://gizmodo.com/" class="list-group-item list-group-item-action" target="_blank">Gizmodo</a>
+							<a href="http://kotaku.com/" class="list-group-item list-group-item-action" target="_blank">Kotaku</a>
+						</div>
+						<!-- List -->
+
+					</div><!-- Column -->
+					<div class="col">
+
+						<!-- List -->
+						<div class="list-group">
+							<a href="https://github.com/" class="list-group-item list-group-item-action" target="_blank">GitHub</a>
+							<a href="http://gizmodo.com/" class="list-group-item list-group-item-action" target="_blank">Gizmodo</a>
+							<a href="http://kotaku.com/" class="list-group-item list-group-item-action" target="_blank">Kotaku</a>
+						</div>
+						<!-- List -->
+
+					</div><!-- Column -->
+				</div><!-- Row -->
+
 					<!-- A few of my favorite things -->
 					<div class="row">
             <section class="col-md-3" style="display:block;">
