--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 						<li class="nav-item">
 							<a class="nav-link" href="https://panel.dreamhost.com/" target="_blank">Dreamhost</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://github.com/hamiltopia" target="_blank">GitHub</a>
+						</li>
 					</ul>
 				</div>
 
@@ -55,7 +58,7 @@
 
 			<div id="main" class="container-fluid">
 				<div class="container">
-					
+
 					<!-- A few of my favorite things -->
 					<div class="row">
             <section class="col-md-3" style="display:block;">
