--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
 							<h4>Colors</h4>
               <div class="list-group">
+		      						<a href="https://colordesigner.io/" class="list-group-item list-group-item-action" target="_blank">Color Designer</a>
 								<a href="https://colordesigner.io/gradient-generator" class="list-group-item list-group-item-action" target="_blank">Color Palette Gradient Generator</a>
 								<a href="https://colorpalettes.com/" class="list-group-item list-group-item-action" target="_blank">Color Palettes</a>
                 <a href="https://material.io/guidelines/style/color.html" class="list-group-item list-group-item-action" target="_blank">Material Color Style</a>
